source/sass/components/article-page.scss
/**
 * ArticlePage-specific styling.
 * Also see publication-page.scss and chapter-page.scss
 */

.article-summary {
  /* stylelint-disable */
  background: rgb(231, 231, 252); // One-off colors; no variable exists for this
  /* stylelint-enable */
  padding: 32px 30px;
  width: calc(80% + 60px);
  margin: -48px auto 48px;

  @media (max-width: $bp-md) {
    max-width: 100%;
    width: 100%;
  }
}

.article-summary,
.article-summary-link {
  color: $gray-60;
  font-family: $font-family-sans-serif;
}

.article-summary-share-links {
  position: absolute;
  left: 0;
  top: 20px;
}

.article-links {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.article-summary-link {
  margin-top: 17px;
  flex-basis: 50%;
  flex-grow: 0;
  flex-shrink: 0;

  &:hover {
    color: $gray-60;
  }
}

.article-summary-title {
  color: $black;
  @include set-text-size(12px, 16px);
  font-family: $font-family-sans-serif;
  font-weight: normal;
}

.footnotes-title {
  color: $black;
  @include set-text-size(20px, 30px);
  font-family: $font-family-sans-serif;
  font-weight: bold;
}

.footnote-row .rich-text {
  display: inline-block;
}

.footnote-number {
  color: $blue;
  @include set-text-size(18px, 27px);
  font-family: $font-family-sans-serif;
  margin-right: 7px;
}

.footnote-row a.footnote-text * {
  color: $gray-60;
  @include set-text-size(18px, 27px);
  font-family: $font-family-sans-serif;
  font-weight: normal;
  text-decoration: underline;
}

.article-prev-next {
  background: $gray-05;
  padding-top: 24px;
  padding-bottom: 24px;
}

.article-prev {
  border-right: 1px solid $gray-20;
  padding-right: 110px;
  min-height: 83px;
}

.article-next {
  padding-left: 110px;
  min-height: 83px;
}

.prev-next-text {
  color: $gray-40;
  @include set-text-size(12px, 16px);
  font-weight: normal;
  font-family: $font-family-sans-serif;
  display: block;
  margin-bottom: 6px;
  text-decoration: none !important;

  &:hover {
    text-decoration: none !important;
  }
}

.article-prev-next-link {
  color: $black;
  @include set-text-size(20px, 30px);
  font-family: $font-family-sans-serif;
  font-weight: 300;
  text-decoration: underline;
  display: inline-block;
  width: 80%;
}

.article-nav-arrow,
.article-nav-arrow--left {
  position: relative;
  text-decoration: none !important; // !important to overwrite hover/active/visited states

  &::before {
    content: "";
    display: block;
    width: 16px;
    height: 24px;
    position: absolute;
    left: -16px;
    top: 50%;
    transform: translateY(-50%);
    background-image: url("../_images/left-chevron.svg");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
  }
}

.article-nav-arrow--right {
  &::before {
    left: initial;
    right: -16px;
    background-image: url("../_images/glyphs/right-chevron.svg");
  }
}

// Custom dropdown
.article-summary-toggle {
  color: $gray-80 !important;
  @include set-text-size(12px, 16px);
  font-size: 12px !important;
  font-family: $font-family-sans-serif;
  font-weight: normal !important;
  text-transform: uppercase;
  padding-top: 0.5rem;

  &::after {
    position: absolute;
    right: 0;
    top: 7px;
    border: 0;
    background-image: url("../_images/glyphs/down-chevron.svg");
    background-size: cover;
    background-position: center center;
    width: 16px;
    height: 16px;
  }

  &.show::after {
    transform: rotate(180deg);
  }
}

.article-summary-menu {
  margin-top: 11px;
  border-radius: 0;
  border-top: 0;
  padding-top: 29px;
  padding-bottom: 22px;

  .dropdown-item {
    color: $gray-60;
    @include set-text-size(18px, 27px);
    font-family: $font-family-sans-serif;
    padding: 5px 40px 5px 30px;

    &:hover {
      /* stylelint-disable */
      background: rgb(242, 242, 242);
      /* stylelint-enable */
      color: $black;
    }
  }
}

// StreamBlocks
.article-blocks .rich-text {
  /**
   * .rich-text styling needs to be specified in CSS rather than Bootstrap classes
   * because we don't have access to the individual elements.
   * This will result in duplicated styling from the Bootstrap framework but there
   * is no feasible way around this.
   */
  a {
    text-decoration: underline;
  }

  // Used for offsetting footnote links so when the footnote at the bottom of the page
  // is clicked, the page will jump to the footnote, minus 160px (the _very_ rough height
  // of the navigation)
  a[id^="footnote-source"]::before {
    content: "";
    display: inline-block;
    height: 160px;
    margin-top: -160px;
    visibility: hidden;
    pointer-events: none;
    width: 1px;
  }

  p,
  h2,
  h3,
  h4,
  h5,
  ol,
  ul {
    max-width: 80%;
    margin: 0 auto;

    @media (max-width: $bp-md) {
      max-width: 100%;
    }
  }

  h2,
  h3,
  h4,
  h5 {
    margin-bottom: 12px;
    position: relative;

    // Used for offsetting anchor tags in the .rich-text area on Article Pages
    a.fragment-id {
      position: absolute;
      top: -160px;
    }
  }

  h3 {
    font-weight: 600;
  }

  hr {
    width: 100%;
    height: 1px;
    border-top: 1px solid $gray-20;
    margin-bottom: 48px;
    margin-top: 47px;
  }

  hr ~ img {
    margin-top: 0 !important;
  }

  p,
  ul,
  ol,
  li {
    margin-bottom: 24px;
  }

  ol,
  ul {
    padding-left: 25px;
  }

  ol > li::marker {
    font-weight: bold;
  }

  li {
    padding-left: 10px;
    margin-bottom: 14px;
  }

  p:empty {
    display: none;
  }

  @media (min-width: $bp-sm) {
    p ~ .richtext-image:not(.full-width) {
      margin-top: 0px;
      margin-bottom: 0px;
    }
  }

  .richtext-image {
    max-width: 350px;
  }

  .left {
    float: left;
    margin: 24px 30px 24px 0;
  }

  .right {
    float: right;
    margin: 24px 0 24px 30px;
  }

  .full-width {
    margin: 24px 0;
    width: 100%;
    max-width: 100%;
    position: relative;
  }
}

.article-blockquote-block {
  color: $black;
  @include set-text-size(20px, 30px);
  font-family: $font-family-sans-serif;
  font-weight: 300;
  background: $gray-05;
  padding: 24px 30px;
  width: calc(80% + 60px);

  &--small {
    color: $black;
    @include set-text-size(18px, 27px);
    font-weight: normal;
  }
}

@media (max-width: $bp-md) {
  .article-blockquote-block {
    padding: 18px 22px;
    @include set-text-size(18px, 27px);
    width: 100%;
  }
}

.article-table-block .table {
  margin-top: 24px;
  margin-bottom: 24px;
  background-color: $white;

  td,
  th {
    /* stylelint-disable */
    border-bottom: 1px solid rgb(160, 162, 248); // One-off colors; no variable exists for this
    /* stylelint-enable */
    color: $gray-80;
    @include set-text-size(16px, 24px);
    font-family: $font-family-sans-serif;
    font-weight: normal;
  }

  thead td,
  thead th {
    background: $blue;
    color: $white;
    @include set-text-size(16px, 24px);
    font-family: $font-family-sans-serif;
    font-weight: 600;
  }
  caption {
    color: $gray-60;
    @include set-text-size(12px, 16px);
    font-family: $font-family-sans-serif;
    margin-top: 16px;
    padding: 0;
  }
}

.double-image-block,
.full-width-image-block {
  figurecaption p {
    color: $gray-60;
    @include set-text-size(12px, 16px);
    font-family: $font-family-sans-serif;
    margin-top: 18px;
  }
}

.article-navbar {
  /* stylelint-disable */
  background: rgb(231, 231, 252); // One-off colors; no variable exists for this
  /* stylelint-enable */
  padding: 9px 0;
}
.article-navbar-title {
  color: $black;
  @include set-text-size(20px, 30px);
  font-family: $font-family-sans-serif;
  font-weight: 300;
}

@media (max-width: $bp-md) {
  .article-summary-link {
    flex-basis: 100%;

    &:last-child {
      margin-bottom: 0;
    }
  }

  .article-blocks .rich-text .richtext-image {
    &.full-width,
    &.right,
    &.left {
      margin: 0 0 24px 0;
      width: 100%;
      max-width: 100%;
      position: relative;
      float: initial;
    }
  }
}

@media (max-width: $bp-sm) {
  .article-prev-next-link {
    margin-bottom: 30px;
  }

  .article-prev {
    border-bottom: 1px solid $gray-20;
    border-right: 0;
    padding-right: 15px;
  }

  .article-nav-arrow--left::before {
    left: 15px;
  }
  .article-nav-arrow--right::before {
    right: 15px;
    transform: initial;
  }

  .article-next {
    padding-left: 15px;
    padding-top: 40px;
  }
}

@media (max-width: $bp-lg) {
  .article-summary-menu {
    margin-top: 9px;
  }
}

